--- a/iissnan.github.com 大师/index.html
+++ b/iissnan.github.com 大师/index.html
@@ -19,8 +19,7 @@
       <span class="quote-icon quote-icon-start animate-slide-in-down">
         <i class="icon icon-quotes-left"></i>
       </span>
-      <p class="quote-content animate-slide-in-down">不积跬步，无以至千里。不积小流，无以成江海。</p>
-      <p class="quote-author animate-slide-in-down">《劝学篇》—— <em>荀子</em></p>
+      <p class="quote-content animate-slide-in-down">万里长城今犹在，不见当年秦始皇。</p>
       <span class="quote-icon quote-icon-end animate-slide-in-up">
         <i class="icon icon-quotes-right"></i>
       </span>
